--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
+  transition: background-color var(--transition-duration) var(--transition-timing-function),
+    box-shadow var(--transition-duration) var(--transition-timing-function);
 }
 
 .section {
@@ -186,7 +188,7 @@ img {
   display: block;
   width: 100%;
   height: 4px;
-  bottom: 0;
+  bottom: -1px;
   border-radius: 2px;
   background-color: var(--accent-text-color);
 }
@@ -256,7 +258,8 @@ img {
   font-size: var(--font-size-secondary);
   line-height: 1.88;
   letter-spacing: var(--letter-spacing-secondary);
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
+  transition: background-color var(--transition-duration) var(--transition-timing-function),
+    box-shadow var(--transition-duration) var(--transition-timing-function);
 }
 
 .button-hero:hover,
@@ -544,6 +547,71 @@ img {
   fill: currentColor;
 }
 
+.footer-form {
+  margin-left: auto;
+}
+
+.form-text {
+  line-height: 1.14;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 20px;
+}
+
+.form-container {
+  display: flex;
+}
+
+.footer-form-mail {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  width: 358px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: var(--white-color);
+}
+
+.footer-form-mail:focus {
+  outline: none;
+}
+
+.footer-form-mail::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-sign-btn {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 1.87;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  margin-left: 12px;
+  transition: background-color var(--transition-duration) var(--transition-timing-function),
+    box-shadow var(--transition-duration) var(--transition-timing-function);
+}
+
+.footer-sign-btn:hover,
+.footer-sign-btn:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.btn-send-icon {
+  margin-left: 10px;
+  fill: var(--white-color);
+}
+
 /* ==========================================PORTFOLIO===================================== */
 .section-portfolio {
   padding-top: 94px;
@@ -698,6 +766,7 @@ img {
 
   min-width: 528px;
   min-height: 581px;
+  padding: 40px;
 
   background-color: var(--background-color-page);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -733,4 +802,126 @@ img {
 
 .modal-close-icon {
   fill: currentColor;
+}
+
+.modal-text {
+  font-size: 20px;
+  line-height: 1.15;
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  margin-bottom: 12px;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-field {
+  margin-bottom: 20px;
+}
+
+.modal-form-input-desc {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+}
+
+.modal-form-input-wrapper {
+  display: block;
+  position: relative;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  transition: border-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--accent-text-color);
+}
+
+.modal-form-input-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  transition: fill var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: var(--accent-text-color);
+}
+
+.modal-form-coments {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-coments:focus {
+  outline: none;
+  border-color: var(--accent-text-color);
+}
+
+.modal-form-coments::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-check-desc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.modal-form-fake-checkbox {
+  width: 16px;
+  height: 15px;
+  border-radius: 2px;
+  margin-right: 7px;
+  border: 2px solid #212121;
+  transition: background-color var(--transition-duration) var(--transition-timing-function),
+    opacity var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-checkbox-icon {
+  fill: var(--white-color);
+  opacity: 0;
+}
+
+.modal-form-check:checked + * .modal-form-fake-checkbox {
+  background-color: var(--accent-text-color);
+  border: none;
+}
+
+.modal-form-check:checked + * .modal-form-fake-checkbox > .modal-form-checkbox-icon {
+  opacity: 1;
+}
+
+.modal-form-check-link {
+  color: var(--accent-text-color);
+  border-bottom: 1px solid var(--accent-text-color);
+}
+
+.modal-form-button:hover,
+.modal-form-button:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
